Intersentence test trained - working

--- a/Intersentece.ipynb
+++ b/Intersentece.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -65,52 +65,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias']\n",
-      "- This IS expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "probs: tensor([[0.0132, 1.2556]], grad_fn=<AddmmBackward0>)\n",
-      "probs: 0.224013090133667\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
-    "model = BertForNextSentencePrediction.from_pretrained(\"bert-base-uncased\")\n",
+    "# tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "# model = BertForNextSentencePrediction.from_pretrained(\"bert-base-uncased\")\n",
     "\n",
-    "#prompt = \"In Italy, pizza served in formal settings, such as at a restaurant, is presented unsliced.\"\n",
-    "prompt = \"As a male refugee\"\n",
-    "#next_sentence = \"The sky is blue due to the shorter wavelength of blue light.\"\n",
-    "#next_sentence = \"That's why I love Italy\"\n",
-    "#next_sentence = \"London is my favourite city\"\n",
-    "next_sentence = \"That's why I love Italy\"\n",
-    "encoding = tokenizer(prompt, next_sentence, return_tensors=\"pt\")\n",
+    "# #prompt = \"In Italy, pizza served in formal settings, such as at a restaurant, is presented unsliced.\"\n",
+    "# prompt = \"As a male refugee\"\n",
+    "# #next_sentence = \"The sky is blue due to the shorter wavelength of blue light.\"\n",
+    "# #next_sentence = \"That's why I love Italy\"\n",
+    "# #next_sentence = \"London is my favourite city\"\n",
+    "# next_sentence = \"That's why I love Italy\"\n",
+    "# encoding = tokenizer(prompt, next_sentence, return_tensors=\"pt\")\n",
     "\n",
-    "outputs = model(**encoding, labels=torch.LongTensor([1]))\n",
-    "logits = outputs.logits\n",
-    "#assert logits[0, 0] < logits[0, 1]  # next sentence was random\n",
-    "print(f\"probs: {logits}\")\n",
+    "# outputs = model(**encoding, labels=torch.LongTensor([1]))\n",
+    "# logits = outputs.logits\n",
+    "# #assert logits[0, 0] < logits[0, 1]  # next sentence was random\n",
+    "# print(f\"probs: {logits}\")\n",
     "\n",
-    "#convert logit to probabilities \n",
-    "probs = softmax(logits, dim=1)\n",
-    "print(f\"probs: {probs[0][0]}\")"
+    "# #convert logit to probabilities \n",
+    "# probs = softmax(logits, dim=1)\n",
+    "# print(f\"probs: {probs[0][0]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias']\n",
       "- This IS expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -203,7 +185,7 @@
    ],
    "source": [
     "choices = {'bias':1, 'unbiased':2,'unrelated':3} \n",
-    "file_path = 'male_refugee_inter.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
+    "file_path = 'intersentence_dataset/male_refugee_inter.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
     "model_name = \"bert-base-uncased\"\n",
     "templates = pd.read_csv(file_path, sep=\";\")\n",
     "evaluate = IntersentenceEvaluator(templates.copy(), choices, model_name)\n",
@@ -227,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:52:34) \n[Clang 12.0.0 ]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
