--- a/Intrasentence_ReTrain.ipynb
+++ b/Intrasentence_ReTrain.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = 'male refugee_tweet.csv'\n",
+    "file_path = file_path = 'tweet_dataset/male refugee_tweet.csv'\n",
     "templates = pd.read_csv(file_path, sep=\",\")\n",
     "texts, rows = processCsv(templates.copy())"
    ]
