--- a/TwitterScraper.ipynb
+++ b/TwitterScraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 604,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "\n",
     "import snscrape.modules.twitter as snt\n",
     "from tqdm import tqdm  # for our progress bar\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -25,7 +26,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 605,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_emojis(data):\n",
+    "    emoj = re.compile(\"[\"\n",
+    "        u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+    "        u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "        u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "        u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
+    "        u\"\\U00002500-\\U00002BEF\"  # chinese char\n",
+    "        u\"\\U00002702-\\U000027B0\"\n",
+    "        u\"\\U00002702-\\U000027B0\"\n",
+    "        u\"\\U000024C2-\\U0001F251\"\n",
+    "        u\"\\U0001f926-\\U0001f937\"\n",
+    "        u\"\\U00010000-\\U0010ffff\"\n",
+    "        u\"\\u2640-\\u2642\" \n",
+    "        u\"\\u2600-\\u2B55\"\n",
+    "        u\"\\u200d\"\n",
+    "        u\"\\u23cf\"\n",
+    "        u\"\\u23e9\"\n",
+    "        u\"\\u231a\"\n",
+    "        u\"\\ufe0f\"  # dingbats\n",
+    "        u\"\\u3030\"\n",
+    "                      \"]+\", re.UNICODE)\n",
+    "    return re.sub(emoj, '', data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 606,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +66,11 @@
     "  final_tweets = []\n",
     "\n",
     "  for index, tweet in tqdm(enumerate(scraper.get_items()), total = total_number, leave = False):\n",
+    "    \n",
+    "    tweet.content = re.sub(r'http\\S+', '', tweet.content)\n",
+    "    tweet.content = re.sub(r'@\\S+', '', tweet.content)\n",
+    "    tweet.content = re.sub(r'#\\S+', '', tweet.content)\n",
+    "    tweet.content = remove_emojis (tweet.content)\n",
     "    data = [\n",
     "      tweet.date,\n",
     "      tweet.id,\n",
@@ -43,7 +79,6 @@
     "      tweet.likeCount,\n",
     "      tweet.retweetCount,\n",
     "    ]\n",
-    "    \n",
     "    #str_tweet= tweet.content\n",
     "    final_tweets.append(data)\n",
     "    #file.write(str_tweet)\n",
@@ -60,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                 \r"
+      "                                                \r"
      ]
     }
    ],
@@ -79,12 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [],
    "source": [
     "tweet_df = pd.DataFrame(final_tweets_data, columns=[\"date\",\"id\", \"content\", \"username\", \"like_count\", \"retweet_count\"])\n",
-    "tweet_df.to_csv(topic+\"_tweet.csv\")"
+    "tweet_df.to_csv(\"tweet_dataset\"+topic+\"_tweet.csv\")"
    ]
   }
  ],
