--- a/Intrasentence.ipynb
+++ b/Intrasentence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,10 +66,25 @@
     "        self.sent_encodings, self.word_encodings, self.mask_idxs = self.make_encodings() #store the encodings\n",
     "        self.model = AutoModelForMaskedLM.from_pretrained(model)\n",
     "    \n",
+    "    # def saveDecisions(self, predictions):\n",
+    "    #     data_list =[]\n",
+    "    #     for index,row in self.data.iterrows():\n",
+    "    #         for idx in enumerate(row.loc['candidate_sentence']):\n",
+    "    #             data = [\n",
+    "    #                 index,\n",
+    "    #                 idx[0]+1,\n",
+    "    #                 idx[1] #row.loc['candidate_sentence'],\n",
+    "    #             ]\n",
+    "    #             data_list.append(data)\n",
+    "    #     df = pd.DataFrame(data_list, columns=[\"num_sen\", \"category\",\"sentence\"])\n",
+    "    #     df.to_csv(\"sentiment_dataset/test.csv\")\n",
+    "        #print(row.loc['candidate_sentence'])\n",
+    "        \n",
     "    #Function to make predictions and calculate how often the biased words are chosen\n",
     "    def run_model_and_evaluate(self):\n",
     "        output = self.make_predictions()\n",
     "        # self.bias = self.get_bias(output) #how often do we get the bias\n",
+    "        # self.saveDecisions(output)\n",
     "        self.get_bias(output)\n",
     "\n",
     "    #Insert the candidates words inside the sentences\n",
@@ -146,14 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 2, 2, 1, 1, 1, 1, 1, 1]\n",
       "biased: 14\n",
       "unbiased: 5\n",
       "unrelated: 0\n"
@@ -162,7 +176,7 @@
    ],
    "source": [
     "choices = {'bias':1, 'unbiased':2,'unrelated':3} \n",
-    "file_path = 'testing_data_intra.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
+    "file_path = 'intrasentence_dataset/testing_data_intra.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
     "model_name = 'distilroberta-base'\n",
     "templates = pd.read_csv(file_path, sep=\";\")\n",
     "evaluator = IntrasentenceEvaluator(templates.copy(), choices, model_name)\n",
@@ -186,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  5 2022, 01:52:34) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
