--- a/TwitterScraper.ipynb
+++ b/TwitterScraper.ipynb
@@ -56,6 +56,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_tweet(tweet):\n",
+    "    tweet.content = re.sub(r'http\\S+', '', tweet.content)\n",
+    "    tweet.content = re.sub(r'@\\S+', '', tweet.content)\n",
+    "    tweet.content = re.sub(r'#\\S+', '', tweet.content)\n",
+    "    tweet.content = remove_emojis (tweet.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 606,
    "metadata": {},
    "outputs": [],
@@ -67,10 +80,8 @@
     "\n",
     "  for index, tweet in tqdm(enumerate(scraper.get_items()), total = total_number, leave = False):\n",
     "    \n",
-    "    tweet.content = re.sub(r'http\\S+', '', tweet.content)\n",
-    "    tweet.content = re.sub(r'@\\S+', '', tweet.content)\n",
-    "    tweet.content = re.sub(r'#\\S+', '', tweet.content)\n",
-    "    tweet.content = remove_emojis (tweet.content)\n",
+    "    clean_tweet(tweet)\n",
+    "    \n",
     "    data = [\n",
     "      tweet.date,\n",
     "      tweet.id,\n",
@@ -119,13 +130,13 @@
    "outputs": [],
    "source": [
     "tweet_df = pd.DataFrame(final_tweets_data, columns=[\"date\",\"id\", \"content\", \"username\", \"like_count\", \"retweet_count\"])\n",
-    "tweet_df.to_csv(\"tweet_dataset\"+topic+\"_tweet.csv\")"
+    "tweet_df.to_csv(\"tweet_dataset/\"+topic+\"_tweet.csv\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -139,12 +150,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.12 (main, Apr  5 2022, 01:52:34) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "12861e5315bdb75fb922ae54cdca33f3b247952a8c09f8d18a3c35e2aa0589f6"
+    "hash": "5c431e0593e1ee77f96bd6f746b63b987ead1ae8f9402a6438f4058638187923"
    }
   }
  },
