compare predictions - in progress

--- a/Intrasentence.ipynb
+++ b/Intrasentence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,20 +65,6 @@
     "        self.tokenizer = AutoTokenizer.from_pretrained(model)\n",
     "        self.sent_encodings, self.word_encodings, self.mask_idxs = self.make_encodings() #store the encodings\n",
     "        self.model = AutoModelForMaskedLM.from_pretrained(model)\n",
-    "    \n",
-    "    # def saveDecisions(self, predictions):\n",
-    "    #     data_list =[]\n",
-    "    #     for index,row in self.data.iterrows():\n",
-    "    #         for idx in enumerate(row.loc['candidate_sentence']):\n",
-    "    #             data = [\n",
-    "    #                 index,\n",
-    "    #                 idx[0]+1,\n",
-    "    #                 idx[1] #row.loc['candidate_sentence'],\n",
-    "    #             ]\n",
-    "    #             data_list.append(data)\n",
-    "    #     df = pd.DataFrame(data_list, columns=[\"num_sen\", \"category\",\"sentence\"])\n",
-    "    #     df.to_csv(\"sentiment_dataset/test.csv\")\n",
-    "        #print(row.loc['candidate_sentence'])\n",
     "        \n",
     "    #Function to make predictions and calculate how often the biased words are chosen\n",
     "    def run_model_and_evaluate(self):\n",
@@ -134,11 +120,12 @@
     "            candidate_logits = self.model(candidate_input_ids, attention_mask=candidate_attention_masks).logits #where logits is  raw output of the model -> prediction\n",
     "            # -> output shape: 3 * num of tokens*vocab size, e.g. a prediction over the vocabulary for each token in each candidate question\n",
     "            # -> probability distribution over the whole vocab size\n",
+    "            #print(candidate_logits)\n",
     "            for idx, (token, mask_idxs) in enumerate(zip(w, m)): #for each of the 3 candidate sentences, we need to pick out the token that we masked in the sentence\n",
     "                mask_token_logits = candidate_logits[idx, mask_idxs, token] # here we want to find the raw prediction for the candidate word\n",
     "                candidate_score = float(torch.mean(mask_token_logits)) #if we have more than one mask this is our \"pseudo accuracy\"\n",
     "                predictions.append(candidate_score)\n",
-    "            #print(f\"iprediction: {q_idx}, values: {predictions}\")\n",
+    "            print(f\"iprediction: {q_idx}, values: {predictions}\")\n",
     "            output.append(np.argmax(predictions) + 1) #start the keys for the choices at 1 as well > returns the choice that is chosen as an answer, we don't need that\n",
     "        #print(output)\n",
     "        return output\n",
@@ -161,13 +148,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "iprediction: 0, values: [7.185578346252441, 8.749090194702148, 2.714723587036133]\n",
+      "iprediction: 1, values: [8.126306533813477, 7.977938175201416, 2.7687458992004395]\n",
+      "iprediction: 2, values: [18.50677490234375, 16.819169998168945, 0.7815519571304321]\n",
+      "iprediction: 3, values: [19.174440383911133, 17.330381393432617, 0.5596160888671875]\n",
+      "iprediction: 4, values: [18.236270904541016, 11.68066120147705, -1.5433851480484009]\n",
+      "iprediction: 5, values: [18.87169647216797, 12.112446784973145, -2.0051679611206055]\n",
+      "iprediction: 6, values: [5.291213512420654, 6.423586368560791, 2.75144624710083]\n",
+      "iprediction: 7, values: [7.072975158691406, 5.388095378875732, 2.4331154823303223]\n",
+      "iprediction: 8, values: [10.542276382446289, 7.917421817779541, 0.6568161845207214]\n",
+      "iprediction: 9, values: [7.946379661560059, 6.730357646942139, -0.47428375482559204]\n",
+      "iprediction: 10, values: [6.785642623901367, 11.72802448272705, 5.898526191711426]\n",
+      "iprediction: 11, values: [12.206456184387207, 12.279889106750488, 6.519702434539795]\n",
+      "iprediction: 12, values: [6.470889568328857, 6.885239601135254, 3.353670120239258]\n",
+      "iprediction: 13, values: [11.409015655517578, 8.353075981140137, 0.9683678150177002]\n",
+      "iprediction: 14, values: [15.5476655960083, 9.264442443847656, 1.5930993556976318]\n",
+      "iprediction: 15, values: [16.510257720947266, 16.16559600830078, 2.356173276901245]\n",
+      "iprediction: 16, values: [17.004684448242188, 16.71576690673828, 2.324373960494995]\n",
+      "iprediction: 17, values: [5.9591898918151855, 5.577597141265869, 3.2791895866394043]\n",
+      "iprediction: 18, values: [5.907992839813232, 5.427173614501953, 3.3854613304138184]\n",
       "biased: 14\n",
       "unbiased: 5\n",
       "unrelated: 0\n"
@@ -200,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:52:34) \n[Clang 12.0.0 ]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
