--- a/Intersentence_ReTrain.ipynb
+++ b/Intersentence_ReTrain.ipynb
@@ -416,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.2 (default, Oct  2 2022, 19:14:45) \n[Clang 14.0.0 (clang-1400.0.29.102)]"
   },
   "orig_nbformat": 4,
   "vscode": {
