--- a/TwitterScraper.ipynb
+++ b/TwitterScraper.ipynb
@@ -1,18 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 604,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#!pip3 -qqq install snscrape \n",
-    "#!pip install tqdm\n",
-    "\n",
-    "import snscrape.modules.twitter as snt\n",
-    "from tqdm import tqdm  # for our progress bar\n",
-    "import pandas as pd\n",
-    "import re"
+    "# Twitter Scraper"
    ]
   },
   {
@@ -20,13 +13,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "References:\n",
     "- https://medium.com/dataseries/how-to-scrape-millions-of-tweets-using-snscrape-195ee3594721\n",
     "- https://www.youtube.com/watch?v=PUMMCLrVn8A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip3 -qqq install snscrape \n",
+    "#!pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import snscrape.modules.twitter as snt\n",
+    "from tqdm import tqdm  # for our progress bar\n",
+    "import pandas as pd\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,53 +106,47 @@
     "      tweet.likeCount,\n",
     "      tweet.retweetCount,\n",
     "    ]\n",
-    "    #str_tweet= tweet.content\n",
     "    final_tweets.append(data)\n",
-    "    #file.write(str_tweet)\n",
     "    if(index == total_number):\n",
     "      break\n",
-    "          \n",
-    "  # file.write('.'.join(final_tweets))\n",
-    "      \n",
-    "  # Create the dataframe\n",
-    "  #final_tweets_df = pd.DataFrame(final_tweets, columns = column_names)\n",
-    "  \n",
     "  return final_tweets"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change the number of tweets and the topic for obtain different results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                \r"
+      "                                                  \r"
      ]
     }
    ],
    "source": [
-    "num_tweets = 100\n",
-    "topic = \"male refugee\"\n",
-    "final_tweets_data = grab_tweets(num_tweets, topic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 608,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "num_tweets = 1000\n",
+    "topic = \"female refugee\"\n",
+    "csv_path = \"tweet_dataset/\"+topic+\"_tweet.csv\"\n",
+    "final_tweets_data = grab_tweets(num_tweets, topic)\n",
+    "\n",
     "tweet_df = pd.DataFrame(final_tweets_data, columns=[\"date\",\"id\", \"content\", \"username\", \"like_count\", \"retweet_count\"])\n",
-    "tweet_df.to_csv(\"tweet_dataset/\"+topic+\"_tweet.csv\")"
+    "tweet_df.to_csv(csv_path)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -150,12 +160,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:52:34) \n[Clang 12.0.0 ]"
+   "version": "3.8.15 (default, Nov 24 2022, 08:57:44) \n[Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5c431e0593e1ee77f96bd6f746b63b987ead1ae8f9402a6438f4058638187923"
+    "hash": "15d6292860cc78e97636364eb566ee442ee091f2fa7bba70cf5bdbfcb3ed8354"
    }
   }
  },
