File structure update - twitter scraper broken

--- a/Intrasentence/Intrasentence.ipynb
+++ b/Intrasentence/Intrasentence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +124,9 @@
     "            for idx, (token, mask_idxs) in enumerate(zip(w, m)): #for each of the 3 candidate sentences, we need to pick out the token that we masked in the sentence\n",
     "                mask_token_logits = candidate_logits[idx, mask_idxs, token] # here we want to find the raw prediction for the candidate word\n",
     "                candidate_score = float(torch.mean(mask_token_logits)) #if we have more than one mask this is our \"pseudo accuracy\"\n",
+    "                print(candidate_score)\n",
     "                predictions.append(candidate_score)\n",
-    "            print(f\"iprediction: {q_idx}, values: {predictions}\")\n",
+    "            #print(f\"iprediction: {q_idx}, values: {predictions}\")\n",
     "            output.append(np.argmax(predictions) + 1) #start the keys for the choices at 1 as well > returns the choice that is chosen as an answer, we don't need that\n",
     "        #print(output)\n",
     "        return output\n",
@@ -148,31 +149,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "7.185578346252441\n",
+      "8.749090194702148\n",
+      "2.714723587036133\n",
       "iprediction: 0, values: [7.185578346252441, 8.749090194702148, 2.714723587036133]\n",
+      "8.126306533813477\n",
+      "7.977938175201416\n",
+      "2.7687458992004395\n",
       "iprediction: 1, values: [8.126306533813477, 7.977938175201416, 2.7687458992004395]\n",
+      "18.50677490234375\n",
+      "16.819169998168945\n",
+      "0.7815519571304321\n",
       "iprediction: 2, values: [18.50677490234375, 16.819169998168945, 0.7815519571304321]\n",
+      "19.174440383911133\n",
+      "17.330381393432617\n",
+      "0.5596160888671875\n",
       "iprediction: 3, values: [19.174440383911133, 17.330381393432617, 0.5596160888671875]\n",
+      "18.236270904541016\n",
+      "11.68066120147705\n",
+      "-1.5433851480484009\n",
       "iprediction: 4, values: [18.236270904541016, 11.68066120147705, -1.5433851480484009]\n",
+      "18.87169647216797\n",
+      "12.112446784973145\n",
+      "-2.0051679611206055\n",
       "iprediction: 5, values: [18.87169647216797, 12.112446784973145, -2.0051679611206055]\n",
+      "5.291213512420654\n",
+      "6.423586368560791\n",
+      "2.75144624710083\n",
       "iprediction: 6, values: [5.291213512420654, 6.423586368560791, 2.75144624710083]\n",
+      "7.072975158691406\n",
+      "5.388095378875732\n",
+      "2.4331154823303223\n",
       "iprediction: 7, values: [7.072975158691406, 5.388095378875732, 2.4331154823303223]\n",
+      "10.542276382446289\n",
+      "7.917421817779541\n",
+      "0.6568161845207214\n",
       "iprediction: 8, values: [10.542276382446289, 7.917421817779541, 0.6568161845207214]\n",
+      "7.946379661560059\n",
+      "6.730357646942139\n",
+      "-0.47428375482559204\n",
       "iprediction: 9, values: [7.946379661560059, 6.730357646942139, -0.47428375482559204]\n",
+      "6.785642623901367\n",
+      "11.72802448272705\n",
+      "5.898526191711426\n",
       "iprediction: 10, values: [6.785642623901367, 11.72802448272705, 5.898526191711426]\n",
+      "12.206456184387207\n",
+      "12.279889106750488\n",
+      "6.519702434539795\n",
       "iprediction: 11, values: [12.206456184387207, 12.279889106750488, 6.519702434539795]\n",
+      "6.470889568328857\n",
+      "6.885239601135254\n",
+      "3.353670120239258\n",
       "iprediction: 12, values: [6.470889568328857, 6.885239601135254, 3.353670120239258]\n",
+      "11.409015655517578\n",
+      "8.353075981140137\n",
+      "0.9683678150177002\n",
       "iprediction: 13, values: [11.409015655517578, 8.353075981140137, 0.9683678150177002]\n",
+      "15.5476655960083\n",
+      "9.264442443847656\n",
+      "1.5930993556976318\n",
       "iprediction: 14, values: [15.5476655960083, 9.264442443847656, 1.5930993556976318]\n",
+      "16.510257720947266\n",
+      "16.16559600830078\n",
+      "2.356173276901245\n",
       "iprediction: 15, values: [16.510257720947266, 16.16559600830078, 2.356173276901245]\n",
+      "17.004684448242188\n",
+      "16.71576690673828\n",
+      "2.324373960494995\n",
       "iprediction: 16, values: [17.004684448242188, 16.71576690673828, 2.324373960494995]\n",
+      "5.9591898918151855\n",
+      "5.577597141265869\n",
+      "3.2791895866394043\n",
       "iprediction: 17, values: [5.9591898918151855, 5.577597141265869, 3.2791895866394043]\n",
+      "5.907992839813232\n",
+      "5.427173614501953\n",
+      "3.3854613304138184\n",
       "iprediction: 18, values: [5.907992839813232, 5.427173614501953, 3.3854613304138184]\n",
       "biased: 14\n",
       "unbiased: 5\n",
@@ -182,7 +240,7 @@
    ],
    "source": [
     "choices = {'bias':1, 'unbiased':2,'unrelated':3} \n",
-    "file_path = 'intrasentence_dataset/testing_data_intra.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
+    "file_path = 'dataset/testing_data_intra.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
     "model_name = 'distilroberta-base'\n",
     "templates = pd.read_csv(file_path, sep=\";\")\n",
     "evaluator = IntrasentenceEvaluator(templates.copy(), choices, model_name)\n",
