--- a/Compare predictions/WordPrediction.ipynb
+++ b/Compare predictions/WordPrediction.ipynb
@@ -478,11 +478,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "templates = pd.read_csv(\"final_templates_refugees.csv\", sep=\";\")\n",
+    "templates = pd.read_csv(\"templates/template_refugees.csv\", sep=\";\")\n",
     "topic = \"refugees\"\n",
     "personList = [\"male\", \"female\"]\n",
     "numAtt = 20\n",
-    "newTemplate = f\"comparePredictions_dataset/\"+ topic + \".csv\"\n",
+    "newTemplate = f\"word_prediction/\"+ topic + \".csv\"\n",
     "temp = createTemplate(templates, newTemplate, personList, numAtt)"
    ]
   }
@@ -503,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:52:10) \n[Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
