--- a/Intersentence/Intersentece.ipynb
+++ b/Intersentence/Intersentece.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
       "- This IS expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -177,27 +177,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_predictions: tensor([[0.0536, 0.9464]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[0.9556, 0.0444]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[0.0020, 0.9980]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[9.9997e-01, 2.5623e-05]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[9.9998e-01, 1.7451e-05]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[0.0027, 0.9973]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[9.9997e-01, 3.3900e-05]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[0.0174, 0.9826]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[0.0219, 0.9781]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[9.9994e-01, 6.0388e-05]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[9.9990e-01, 9.5620e-05]], grad_fn=<SoftmaxBackward0>)\n",
-      "_predictions: tensor([[0.0258, 0.9742]], grad_fn=<SoftmaxBackward0>)\n",
-      "biased: 0\n",
-      "unbiased: 0\n",
+      "biased: 2\n",
+      "unbiased: 2\n",
       "unrelated: 0\n"
      ]
     }
    ],
    "source": [
     "choices = {'bias':1, 'unbiased':2,'unrelated':3} \n",
-    "file_path = 'intersentence_dataset/male_refugee_inter.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
+    "file_path = 'dataset/male_refugee_inter.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
     "model_name = \"bert-base-uncased\"\n",
     "templates = pd.read_csv(file_path, sep=\";\")\n",
     "evaluate = IntersentenceEvaluator(templates.copy(), choices, model_name)\n",
@@ -221,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:52:10) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
