Create test graph and fix of the used models

--- a/Proj/Compare predictions/WordPrediction.ipynb
+++ b/Proj/Compare predictions/WordPrediction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -356,7 +356,7 @@
        ")"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,28 +406,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['welcome', 'welcomed', 'allowed', 'accepted', 'admitted']"
+       "['welcome',\n",
+       " 'welcomed',\n",
+       " 'allowed',\n",
+       " 'excluded',\n",
+       " 'included',\n",
+       " 'uncommon',\n",
+       " 'admitted',\n",
+       " 'accepted',\n",
+       " 'encouraged',\n",
+       " 'rare']"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adjectiveList = predict_masked_sent(\"Male refugees are [MASK].\", 5)\n",
+    "adjectiveList = predict_masked_sent(\"female refugees are [MASK].\", 10)\n",
     "adjectiveList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,9 +483,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['unknown', 'excluded', 'present', 'tolerated', 'common', 'accepted', 'welcome', 'rare', 'prohibited', 'welcomed', 'eligible', 'available', 'included', 'illegal', 'permitted', 'admitted', 'free', 'allowed', 'encouraged', 'uncommon']\n",
+      "['unknown', 'excluded', 'present', 'tolerated', 'common', 'accepted', 'welcome', 'rare', 'prohibited', 'welcomed', 'eligible', 'available', 'included', 'illegal', 'permitted', 'admitted', 'free', 'allowed', 'encouraged', 'uncommon', 'forbidden', 'expected']\n",
+      "['reduced', 'increased', 'mixed', 'large', 'moderate', 'highest', 'better', 'comparable', 'low', 'lower', 'good', 'high', 'equal', 'greater', 'different', 'improved', 'similar', 'poor', 'higher', 'strong']\n",
+      "['reduced', 'increased', 'mixed', 'large', 'moderate', 'highest', 'better', 'comparable', 'low', 'lower', 'good', 'high', 'equal', 'greater', 'different', 'improved', 'similar', 'poor', 'higher', 'strong', 'significant', 'elevated']\n",
+      "['bound', 'excluded', 'listed', 'guaranteed', 'accepted', 'affected', 'protected', 'welcomed', 'required', 'included', 'regulated', 'governed', 'identified', 'designated', 'admitted', 'represented', 'recognized', 'defined', 'recognised', 'covered']\n",
+      "['bound', 'excluded', 'listed', 'guaranteed', 'accepted', 'affected', 'protected', 'welcomed', 'required', 'included', 'regulated', 'governed', 'identified', 'designated', 'admitted', 'represented', 'recognized', 'defined', 'recognised', 'covered', 'prohibited']\n",
+      "['trade', 'labor', 'employment', 'income', 'welfare', 'education', 'services', 'assistance', 'work', 'taxes', 'transportation', 'infrastructure', 'aid', 'taxation', 'construction', 'agriculture', 'recruitment', 'production', 'development', 'tourism']\n",
+      "['trade', 'labor', 'employment', 'income', 'welfare', 'education', 'services', 'assistance', 'work', 'taxes', 'transportation', 'infrastructure', 'aid', 'taxation', 'construction', 'agriculture', 'recruitment', 'production', 'development', 'tourism', 'business', 'this', 'activities', 'support', 'schools', 'fundraising']\n",
+      "['destination', 'deaths', 'mates', 'arrival', 'migration', 'parents', 'husbands', 'family', 'fathers', 'mothers', 'owners', 'mother', 'relatives', 'ancestors', 'father', 'families', 'return', 'refugees', 'children', 'wives']\n",
+      "['destination', 'deaths', 'mates', 'arrival', 'migration', 'parents', 'husbands', 'family', 'fathers', 'mothers', 'owners', 'mother', 'relatives', 'ancestors', 'father', 'families', 'return', 'refugees', 'children', 'wives', 'husband', 'marriage', 'counterparts']\n",
+      "['alone', 'together', 'exclusively', 'freely', 'there', 'mainly', 'often', 'also', 'overseas', 'regularly', 'abroad', 'worldwide', 'only', 'extensively', 'especially', 'mostly', 'here', 'in', 'frequently', 'primarily']\n",
+      "['alone', 'together', 'exclusively', 'freely', 'there', 'mainly', 'often', 'also', 'overseas', 'regularly', 'abroad', 'worldwide', 'only', 'extensively', 'especially', 'mostly', 'here', 'in', 'frequently', 'primarily', 'even', 'constantly']\n",
+      "['crime', 'stigma', 'violence', 'rape', 'genocide', 'racism', 'bullying', 'torture', 'hiv', 'harassment', 'persecution', 'fraud', 'abuse', 'discrimination', 'terrorism', 'exploitation', 'disease', 'poverty', 'prostitution', 'trafficking']\n",
+      "['crime', 'stigma', 'violence', 'rape', 'genocide', 'racism', 'bullying', 'torture', 'hiv', 'harassment', 'persecution', 'fraud', 'abuse', 'discrimination', 'terrorism', 'exploitation', 'disease', 'poverty', 'prostitution', 'trafficking', 'attacks', 'conscription']\n",
+      "['unknown', 'sizable', 'increased', 'huge', 'record', 'large', 'considerable', 'larger', 'growing', 'vast', 'smaller', 'high', 'varying', 'increasing', 'great', 'similar', 'enormous', 'significant', 'substantial', 'small']\n",
+      "['unknown', 'sizable', 'increased', 'huge', 'record', 'large', 'considerable', 'larger', 'growing', 'vast', 'smaller', 'high', 'varying', 'increasing', 'great', 'similar', 'enormous', 'significant', 'substantial', 'small', 'massive']\n",
+      "['usually', 'will', 'could', 'must', 'may', 'never', 'sometimes', 'cannot', 'voluntarily', 'often', 'generally', 'also', 'automatically', 'to', 'can', 'typically', 'who', 'would', 'should', 'rarely']\n",
+      "['usually', 'will', 'could', 'must', 'may', 'never', 'sometimes', 'cannot', 'voluntarily', 'often', 'generally', 'also', 'automatically', 'to', 'can', 'typically', 'who', 'would', 'should', 'rarely', 'that']\n",
+      "['usually', 'will', 'could', 'must', 'may', 'sometimes', 'cannot', 'now', 'often', 'generally', 'also', 'regularly', 'might', 'can', 'typically', 'would', 'still', 'rarely', 'frequently', 'occasionally']\n",
+      "['usually', 'will', 'could', 'must', 'may', 'sometimes', 'cannot', 'now', 'often', 'generally', 'also', 'regularly', 'might', 'can', 'typically', 'would', 'still', 'rarely', 'frequently', 'occasionally']\n"
+     ]
+    }
+   ],
    "source": [
     "templates = pd.read_csv(\"templates/template_refugees.csv\", sep=\";\")\n",
     "topic = \"refugees\"\n",
