Compare predictions complete + sentiment analysis

--- a/Proj/Compare predictions/WordPrediction.ipynb
+++ b/Proj/Compare predictions/WordPrediction.ipynb
@@ -10,20 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mspawn /conda ENOENT. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import torch\n",
@@ -503,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:52:10) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
