--- a/Proj/Sentiment Analysis/SentimentAnalysis.ipynb
+++ b/Proj/Sentiment Analysis/SentimentAnalysis.ipynb
@@ -9,14 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ProtocolError('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))': /simple/afinn/\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=3, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ProtocolError('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))': /simple/afinn/\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ProtocolError('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))': /simple/afinn/\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ProtocolError('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))': /simple/afinn/\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ProtocolError('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))': /simple/afinn/\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement afinn (from versions: none)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: No matching distribution found for afinn\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: afinn in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -26,19 +20,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from afinn import Afinn\n",
-    "import pandas as pd\n",
-    " \n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      topic  scores sentiments\n",
+      "0     happy     3.0   positive\n",
+      "1      good     3.0   positive\n",
+      "2       bad    -3.0   negative\n",
+      "3  welcomed     2.0   positive\n",
+      "4  umbrella     0.0    neutral\n"
+     ]
+    }
+   ],
+   "source": [
     "#instantiate afinn\n",
     "afn = Afinn()\n",
     " \n",
     "#creating list sentences\n",
-    "news_df = ['les gens pensent aux chiens','i hate flowers',\n",
-    "         'hes kind and smart','we are kind to good people']\n",
+    "news_df = ['happy','good',\n",
+    "         'bad','welcomed', 'umbrella']\n",
     "          \n",
     "# compute scores (polarity) and labels\n",
     "scores = [afn.score(article) for article in news_df]\n",
@@ -57,10 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: -3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "afn = Afinn()\n",
+    "\n",
+    "word = \"bad\"\n",
+    "print (f\"Score: {afn.score(word)}\")"
+   ]
   }
  ],
  "metadata": {
